Introduce Documentation module with related entities, services, and controllers for enhanced documentation management. Add support for documentation sections and reading time calculation.